[gd_scene load_steps=13 format=3 uid="uid://butmcj7b4yw0c"]

[ext_resource type="Script" uid="uid://g6bfslekviym" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="Texture2D" uid="uid://pl2h7lk4kk2b" path="res://art/bkgnd.png" id="1_ig7tw"]
[ext_resource type="LabelSettings" uid="uid://bj12plc2ywtcv" path="res://main.tres" id="3_1bvp3"]
[ext_resource type="Script" uid="uid://da5va608ggpe3" path="res://temp_set_point_label.gd" id="3_h2yge"]
[ext_resource type="LabelSettings" uid="uid://bgesaj7o8v1fa" path="res://smallTemp.tres" id="5_lquwl"]
[ext_resource type="Theme" uid="uid://noyvnw31t82m" path="res://button.tres" id="7_272bh"]
[ext_resource type="PackedScene" uid="uid://8khmnptai4kr" path="res://graph.tscn" id="8_5vw27"]

[sub_resource type="LabelSettings" id="LabelSettings_5vw27"]
font_size = 48
font_color = Color(0, 0.862745, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1bvp3"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_lquwl"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_272bh"]
font_size = 48
font_color = Color(0, 0, 0.862745, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kek77"]
font_size = 48
font_color = Color(0.862745, 0, 0, 1)

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")

[node name="Bkgnd" type="Sprite2D" parent="."]
position = Vector2(764, 536)
scale = Vector2(1.11608, 1)
texture = ExtResource("1_ig7tw")

[node name="ThermostatSlider" type="VSlider" parent="Bkgnd"]
offset_left = -595.497
offset_top = -414.056
offset_right = -524.497
offset_bottom = -144.056
min_value = 50.0
value = 70.0

[node name="ThermostatValue" type="Label" parent="Bkgnd"]
offset_left = 20.2874
offset_top = -433.963
offset_right = 118.287
offset_bottom = -388.963
text = "70°"
label_settings = SubResource("LabelSettings_5vw27")
horizontal_alignment = 1
script = ExtResource("3_h2yge")

[node name="ThermostatLabel" type="Label" parent="Bkgnd"]
offset_left = -646.812
offset_top = -463.159
offset_right = -466.812
offset_bottom = -418.159
text = "Thermostat"
label_settings = SubResource("LabelSettings_1bvp3")

[node name="ErrorValue" type="Label" parent="Bkgnd"]
offset_left = 334.146
offset_top = -188.0
offset_right = 374.146
offset_bottom = -143.0
text = "0°"
label_settings = SubResource("LabelSettings_lquwl")
horizontal_alignment = 1

[node name="PerceptionValue" type="Label" parent="Bkgnd"]
offset_left = -230.322
offset_top = -188.449
offset_right = -190.322
offset_bottom = -143.449
text = "70°"
label_settings = ExtResource("3_1bvp3")

[node name="FurnaceState" type="Label" parent="Bkgnd"]
offset_left = 340.407
offset_top = 90.5514
offset_right = 388.407
offset_bottom = 135.551
text = "Off"
label_settings = ExtResource("3_1bvp3")

[node name="ErrorThresholdSlider" type="VSlider" parent="Bkgnd"]
offset_left = 410.441
offset_top = -384.0
offset_right = 451.441
offset_bottom = -203.0
max_value = 10.0
value = 1.0

[node name="ErrorThresholdLabel" type="Label" parent="Bkgnd"]
offset_left = 309.389
offset_top = -486.0
offset_right = 551.389
offset_bottom = -393.0
text = "Error
Threshold"
label_settings = ExtResource("3_1bvp3")
horizontal_alignment = 1

[node name="ErrorThresholdValue" type="Label" parent="Bkgnd"]
offset_left = 403.24
offset_top = -188.0
offset_right = 456.24
offset_bottom = -143.0
text = "2°"
label_settings = ExtResource("3_1bvp3")
horizontal_alignment = 1

[node name="FrameRateSlider" type="VSlider" parent="Bkgnd"]
offset_left = 550.295
offset_top = -384.0
offset_right = 584.295
offset_bottom = -208.0
min_value = 0.5
max_value = 30.0
step = 0.5
value = 5.0

[node name="FrameRateLabel" type="Label" parent="Bkgnd"]
offset_left = 519.352
offset_top = -486.0
offset_right = 617.352
offset_bottom = -393.0
text = "Frame
Rate"
label_settings = ExtResource("3_1bvp3")
horizontal_alignment = 1

[node name="FrameRateValue" type="Label" parent="Bkgnd"]
offset_left = 540.954
offset_top = -188.0
offset_right = 598.954
offset_bottom = -143.0
text = "5.0"
label_settings = ExtResource("3_1bvp3")
horizontal_alignment = 1

[node name="FurnaceMaxSlider" type="VSlider" parent="Bkgnd"]
offset_left = 495.0
offset_top = 71.0
offset_right = 511.0
offset_bottom = 288.0
min_value = 70.0
max_value = 120.0
value = 100.0

[node name="FurnaceMaxLabel" type="Label" parent="Bkgnd"]
offset_left = 441.944
offset_top = -23.0
offset_right = 565.944
offset_bottom = 70.0
text = "Furnace
Max"
label_settings = ExtResource("3_1bvp3")
horizontal_alignment = 1

[node name="FurnaceMaxValue" type="Label" parent="Bkgnd"]
offset_left = 459.2
offset_top = 295.0
offset_right = 546.2
offset_bottom = 343.0
text = "120°"
label_settings = ExtResource("3_1bvp3")
horizontal_alignment = 1

[node name="FurnaceTemp" type="Label" parent="Bkgnd"]
offset_left = 335.734
offset_top = 131.0
offset_right = 390.734
offset_bottom = 176.0
text = "70°"
label_settings = ExtResource("3_1bvp3")
horizontal_alignment = 1

[node name="OutsideLabel" type="Label" parent="Bkgnd"]
offset_left = -638.458
offset_top = 25.4205
offset_right = -467.458
offset_bottom = 74.4205
text = "Outside"
label_settings = ExtResource("3_1bvp3")
horizontal_alignment = 1

[node name="OutsideValue" type="Label" parent="Bkgnd"]
offset_left = -61.0
offset_top = 287.0
offset_right = 61.0
offset_bottom = 354.0
text = "70°"
label_settings = SubResource("LabelSettings_272bh")
horizontal_alignment = 1

[node name="OutsideSlider" type="VSlider" parent="Bkgnd"]
offset_left = -561.0
offset_top = 88.0
offset_right = -545.0
offset_bottom = 328.0
min_value = -30.0
max_value = 120.0
value = 70.0

[node name="InsideValue1" type="Label" parent="Bkgnd"]
offset_left = 136.814
offset_top = 127.0
offset_right = 216.814
offset_bottom = 161.0
text = "70°"
label_settings = ExtResource("5_lquwl")
horizontal_alignment = 1

[node name="InsideValue2" type="Label" parent="Bkgnd"]
offset_left = 86.4087
offset_top = 159.0
offset_right = 166.409
offset_bottom = 193.0
text = "70°"
label_settings = ExtResource("5_lquwl")
horizontal_alignment = 1

[node name="InsideValue3" type="Label" parent="Bkgnd"]
offset_left = 36.0036
offset_top = 127.0
offset_right = 116.004
offset_bottom = 161.0
text = "70°"
label_settings = ExtResource("5_lquwl")
horizontal_alignment = 1

[node name="InsideValue4" type="Label" parent="Bkgnd"]
offset_left = -14.4014
offset_top = 159.0
offset_right = 65.5986
offset_bottom = 193.0
text = "70°"
label_settings = ExtResource("5_lquwl")
horizontal_alignment = 1

[node name="InsideValue5" type="Label" parent="Bkgnd"]
offset_left = -64.8065
offset_top = 127.0
offset_right = 15.1935
offset_bottom = 161.0
text = "70°"
label_settings = ExtResource("5_lquwl")
horizontal_alignment = 1

[node name="InsideValue6" type="Label" parent="Bkgnd"]
offset_left = -115.212
offset_top = 159.0
offset_right = -35.2115
offset_bottom = 193.0
text = "70°"
label_settings = ExtResource("5_lquwl")
horizontal_alignment = 1

[node name="InsideValue7" type="Label" parent="Bkgnd"]
offset_left = -165.617
offset_top = 127.0
offset_right = -85.6165
offset_bottom = 161.0
text = "70°"
label_settings = ExtResource("5_lquwl")
horizontal_alignment = 1

[node name="InsideValue8" type="Label" parent="Bkgnd"]
offset_left = -216.022
offset_top = 159.0
offset_right = -136.022
offset_bottom = 193.0
text = "70°"
label_settings = ExtResource("5_lquwl")
horizontal_alignment = 1

[node name="InsideValueAverage" type="Label" parent="Bkgnd"]
offset_left = -61.2061
offset_top = 32.0
offset_right = 51.7939
offset_bottom = 99.0
text = "70°"
label_settings = SubResource("LabelSettings_kek77")
horizontal_alignment = 1

[node name="PauseButton" type="Button" parent="Bkgnd"]
offset_left = -416.742
offset_top = -470.0
offset_right = -286.742
offset_bottom = -410.0
theme = ExtResource("7_272bh")
toggle_mode = true
text = "Pause"

[node name="ResetButton" type="Button" parent="Bkgnd"]
offset_left = -248.425
offset_top = -470.0
offset_right = -118.425
offset_bottom = -410.0
theme = ExtResource("7_272bh")
text = "Reset"

[node name="Graph" parent="." instance=ExtResource("8_5vw27")]
position = Vector2(-2, 897)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true
ignore_time_scale = true

[connection signal="drag_ended" from="Bkgnd/ThermostatSlider" to="." method="_on_thermostat_slider_drag_ended"]
[connection signal="drag_started" from="Bkgnd/ThermostatSlider" to="." method="_on_thermostat_slider_drag_started"]
[connection signal="value_changed" from="Bkgnd/ThermostatSlider" to="." method="_on_thermostat_slider_value_changed"]
[connection signal="drag_ended" from="Bkgnd/ErrorThresholdSlider" to="." method="_on_error_threshold_slider_drag_ended"]
[connection signal="drag_started" from="Bkgnd/ErrorThresholdSlider" to="." method="_on_error_threshold_slider_drag_started"]
[connection signal="value_changed" from="Bkgnd/ErrorThresholdSlider" to="." method="_on_error_threshold_slider_value_changed"]
[connection signal="drag_ended" from="Bkgnd/FrameRateSlider" to="." method="_on_frame_rate_slider_drag_ended"]
[connection signal="drag_started" from="Bkgnd/FrameRateSlider" to="." method="_on_frame_rate_slider_drag_started"]
[connection signal="value_changed" from="Bkgnd/FrameRateSlider" to="." method="_on_frame_rate_slider_value_changed"]
[connection signal="drag_ended" from="Bkgnd/FurnaceMaxSlider" to="." method="_on_furnace_max_slider_drag_ended"]
[connection signal="drag_started" from="Bkgnd/FurnaceMaxSlider" to="." method="_on_furnace_max_slider_drag_started"]
[connection signal="value_changed" from="Bkgnd/FurnaceMaxSlider" to="." method="_on_furnace_max_slider_value_changed"]
[connection signal="drag_ended" from="Bkgnd/OutsideSlider" to="." method="_on_outside_slider_drag_ended"]
[connection signal="drag_started" from="Bkgnd/OutsideSlider" to="." method="_on_outside_slider_drag_started"]
[connection signal="value_changed" from="Bkgnd/OutsideSlider" to="." method="_on_outside_slider_value_changed"]
[connection signal="toggled" from="Bkgnd/PauseButton" to="." method="_on_pause_button_toggled"]
[connection signal="button_up" from="Bkgnd/ResetButton" to="." method="_on_reset_button_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
